sonar refactoring